--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
+    "class-validator": "^0.12.2",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2"
@@ -22,6 +24,17 @@
     "@mikro-orm/core": "^4.3.3",
     "@mikro-orm/migrations": "^4.3.3",
     "@mikro-orm/postgresql": "^4.3.3",
-    "pg": "^8.5.1"
+    "apollo-server-express": "^2.19.0",
+    "express": "^4.17.1",
+    "graphql": "^15.4.0",
+    "pg": "^8.5.1",
+    "type-graphql": "^1.1.1"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
