Add user register

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "create:migration": "mikro-orm migration:create",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,6 +26,7 @@
     "@mikro-orm/migrations": "^4.3.3",
     "@mikro-orm/postgresql": "^4.3.3",
     "apollo-server-express": "^2.19.0",
+    "argon2": "^0.27.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "pg": "^8.5.1",
