--- a/server/package.json
+++ b/server/package.json
@@ -27,9 +27,12 @@
     "@mikro-orm/postgresql": "^4.3.3",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
+    "connect-redis": "^5.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.4.0",
     "pg": "^8.5.1",
+    "redis": "^3.0.2",
     "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
