--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.15",
     "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.10",
+    "@types/redis": "^2.8.28",
     "class-validator": "^0.12.2",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
