--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.4",
+    "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "formik": "^2.2.5",
+    "graphql": "^15.4.0",
     "next": "10.0.3",
     "postcss": "^8.2.0",
     "react": "17.0.1",
@@ -17,8 +21,12 @@
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.19.4",
+    "@graphql-codegen/typescript-react-apollo": "2.2.1",
     "@types/node": "^14.14.11",
     "@types/react": "^17.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "@graphql-codegen/typescript-operations": "1.17.12",
+    "@graphql-codegen/typescript": "1.19.0"
   }
 }
