--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/connect-redis": "^0.0.15",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.15.6",
     "@types/node": "^14.14.10",
@@ -31,6 +32,7 @@
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
     "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
