--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.5",
     "graphql": "^15.4.0",
     "next": "10.0.3",
+    "next-apollo": "^5.0.4",
     "postcss": "^8.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -22,11 +23,11 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.4",
+    "@graphql-codegen/typescript": "1.19.0",
+    "@graphql-codegen/typescript-operations": "1.17.12",
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
     "@types/node": "^14.14.11",
     "@types/react": "^17.0.0",
-    "typescript": "^4.1.2",
-    "@graphql-codegen/typescript-operations": "1.17.12",
-    "@graphql-codegen/typescript": "1.19.0"
+    "typescript": "^4.1.2"
   }
 }
