--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.4",
+    "@monaco-editor/react": "^3.7.2",
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "formik": "^2.2.5",
