--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "17.0.1",
+    "react-markdown": "^5.0.3",
+    "remark-gfm": "^1.0.0",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
