--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "formik": "^2.2.5",
+    "github-markdown-css": "^4.0.0",
     "graphql": "^15.4.0",
     "next": "10.0.3",
     "next-apollo": "^5.0.4",
