--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.4",
+    "@babel/standalone": "^7.12.10",
     "@monaco-editor/react": "^3.7.2",
     "@tailwindcss/forms": "^0.2.1",
+    "@types/babel__standalone": "^7.1.3",
     "autoprefixer": "^10.1.0",
     "formik": "^2.2.5",
     "github-markdown-css": "^4.0.0",
