--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@monaco-editor/react": "^3.7.2",
     "@tailwindcss/forms": "^0.2.1",
     "@types/babel__standalone": "^7.1.3",
+    "@types/debounce": "^1.2.0",
     "autoprefixer": "^10.1.0",
+    "debounce": "^1.2.0",
     "formik": "^2.2.5",
     "github-markdown-css": "^4.0.0",
     "graphql": "^15.4.0",
