--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
+    "sass": "^1.30.0",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
