--- a/client/preview/package.json
+++ b/client/preview/package.json
@@ -4,20 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "watch": "webpack --watch"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/standalone": "^7.12.12",
-    "@types/babel__core": "^7.1.12",
-    "express": "^4.17.1",
-    "parcel-bundler": "^1.12.4",
-    "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0"
+    "express": "^4.17.1"
   }
 }
