--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "eslint --fix ./**/*.tsx",
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "@types/debounce": "^1.2.0",
     "autoprefixer": "^10.1.0",
     "debounce": "^1.2.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
     "formik": "^2.2.5",
     "github-markdown-css": "^4.0.0",
     "graphql": "^15.4.0",
@@ -38,6 +40,12 @@
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
     "@types/node": "^14.14.11",
     "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
 }
