--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix ./**/*.tsx",
+    "lint": "eslint --fix \"**/*.{js,jsx,ts,tsx}\"",
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
@@ -14,11 +14,9 @@
     "@babel/standalone": "^7.12.10",
     "@monaco-editor/react": "^3.7.2",
     "@tailwindcss/forms": "^0.2.1",
-    "@types/babel__standalone": "^7.1.3",
-    "@types/debounce": "^1.2.0",
     "autoprefixer": "^10.1.0",
     "debounce": "^1.2.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
+    "eslint-plugin-react": "^7.21.5",
     "formik": "^2.2.5",
     "github-markdown-css": "^4.0.0",
     "graphql": "^15.4.0",
@@ -38,6 +36,8 @@
     "@graphql-codegen/typescript": "1.19.0",
     "@graphql-codegen/typescript-operations": "1.17.12",
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
+    "@types/babel__standalone": "^7.1.3",
+    "@types/debounce": "^1.2.0",
     "@types/node": "^14.14.11",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
@@ -45,6 +45,8 @@
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
