--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
+    "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w"
   },
@@ -27,17 +28,25 @@
     "@types/ioredis": "^4.17.8",
     "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
     "codesandbox": "^2.2.1",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.1",
+    "eslint": "^7.16.0",
     "express-session": "^1.17.1",
+    "express": "^4.17.1",
     "graphql": "^15.4.0",
     "ioredis": "^4.19.2",
     "nodemailer": "^6.4.16",
     "pg": "^8.5.1",
+    "prettier": "^2.2.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.29",
