--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -2,13 +2,20 @@
   "parser": "@typescript-eslint/parser",
   "extends": ["plugin:prettier/recommended"],
 
-  "plugins": ["prettier", "react", "simple-import-sort", "sort-keys-fix"],
+  "plugins": [
+    "prettier",
+    "react",
+    "simple-import-sort",
+    "sort-destructure-keys",
+    "sort-keys-fix"
+  ],
 
   "rules": {
     "prettier/prettier": "error",
-    "simple-import-sort/imports": "error",
+    "react/jsx-sort-props": "error",
     "simple-import-sort/exports": "error",
-    "sort-keys-fix/sort-keys-fix": "error",
-    "react/jsx-sort-props": "error"
+    "simple-import-sort/imports": "error",
+    "sort-destructure-keys/sort-destructure-keys": "error",
+    "sort-keys-fix/sort-keys-fix": "error"
   }
 }
