--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "debounce": "^1.2.0",
-    "eslint-plugin-react": "^7.21.5",
     "formik": "^2.2.5",
     "github-markdown-css": "^4.0.0",
     "graphql": "^15.4.0",
@@ -44,8 +43,10 @@
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
