--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix \"**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint --fix \"./**/*.{ts,tsx,js,jsx}\"",
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
