--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -8,7 +8,8 @@
     "react",
     "simple-import-sort",
     "sort-destructure-keys",
-    "sort-keys-fix"
+    "sort-keys-fix",
+    "typescript-sort-keys"
   ],
 
   "rules": {
@@ -17,6 +18,8 @@
     "simple-import-sort/exports": "error",
     "simple-import-sort/imports": "error",
     "sort-destructure-keys/sort-destructure-keys": "error",
-    "sort-keys-fix/sort-keys-fix": "error"
+    "sort-keys-fix/sort-keys-fix": "error",
+    "typescript-sort-keys/interface": "error",
+    "typescript-sort-keys/string-enum": "error"
   }
 }
