Move preview to public folder

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,7 @@
       "@api/*": ["./api/*"],
       "@components/*": ["./components/*"],
       "@generated/*": ["./generated/*"],
+      "@pages/*": ["./pages/*"],
       "@widgets/*": ["./widgets/*"]
     }
   },
