--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "gen-env": "gen-env-types .env -o src/types/env.d.ts -e .",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
     "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "tsc -w"
+    "start": "node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -35,13 +37,15 @@
     "codesandbox": "^2.2.1",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv-safe": "^8.2.0",
+    "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
-    "eslint": "^7.16.0",
-    "express-session": "^1.17.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "gen-env-types": "^1.0.4",
     "graphql": "^15.4.0",
     "ioredis": "^4.19.2",
     "nodemailer": "^6.4.16",
