--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,9 @@
     "next": "10.0.3",
     "next-apollo": "^5.0.4",
     "postcss": "^8.2.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^14.0.0",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "17.0.1",
