--- a/client/package.json
+++ b/client/package.json
@@ -14,20 +14,22 @@
     "@babel/standalone": "^7.12.10",
     "@monaco-editor/react": "^3.7.2",
     "@tailwindcss/forms": "^0.2.1",
-    "autoprefixer": "^10.1.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9",
     "debounce": "^1.2.0",
     "formik": "^2.2.5",
     "github-markdown-css": "^4.0.0",
     "graphql": "^15.4.0",
     "next": "10.0.3",
     "next-apollo": "^5.0.4",
+    "postcss": "^7",
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
     "sass": "^1.30.0",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.4",
