Add global state manager and move login/register to modals

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,6 +19,8 @@
       "@components/*": ["./components/*"],
       "@generated/*": ["./generated/*"],
       "@pages/*": ["./pages/*"],
+      "@modals/*": ["./modals/*"],
+      "@utils/*": ["./utils/*"],
       "@widgets/*": ["./widgets/*"]
     }
   },
