--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@apollo/client": "^3.3.4",
     "@babel/standalone": "^7.12.10",
+    "@headlessui/react": "^0.2.0",
     "@monaco-editor/react": "^3.7.2",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
     "debounce": "^1.2.0",
     "formik": "^2.2.5",
@@ -26,6 +28,7 @@
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "17.0.1",
+    "react-hooks-global-state": "^1.0.1",
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
     "sass": "^1.30.0",
