--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -4,7 +4,7 @@
   "port": 5432,
   "username": "postgres",
   "password": "postgres",
-  "database": "codeamigo3",
+  "database": "codeamigodb",
   "entities": ["dist/entities/*.js"],
   "migrations": ["dist/migrations/*.js"]
 }
