--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "dev": "nodemon dist/index.js",
     "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "author": "",
   "license": "ISC",
