Begin migrating to overmind for state management

--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "graphql": "^15.4.0",
     "next": "10.0.3",
     "next-apollo": "^5.0.4",
+    "overmind": "latest",
+    "overmind-react": "^27.0.0",
     "postcss": "^7",
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
@@ -43,6 +45,7 @@
     "@types/debounce": "^1.2.0",
     "@types/node": "^14.14.11",
     "@types/react": "^17.0.0",
+    "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
