Use apollo for state mgmt

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,6 +21,7 @@
       "@pages/*": ["./pages/*"],
       "@modals/*": ["./modals/*"],
       "@utils/*": ["./utils/*"],
+      "@state/*": ["./state/*"],
       "@widgets/*": ["./widgets/*"]
     }
   },
