--- a/client/codegen.yml
+++ b/client/codegen.yml
@@ -1,5 +1,7 @@
 overwrite: true
-schema: "http://localhost:4000/graphql"
+schema:
+  - "http://localhost:4000/graphql"
+  - "./apollo/client/schema.graphql"
 documents: "graphql/**/*.graphql"
 generates:
   generated/graphql.tsx:
