--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "predev": "postcss ./styles/globals.css -o ./styles/App.css",
     "lint": "eslint --fix \"./**/*.{ts,tsx,js,jsx}\"",
     "gen": "graphql-codegen --config codegen.yml"
   },
@@ -24,7 +25,7 @@
     "graphql": "^15.4.0",
     "next": "10.0.3",
     "next-apollo": "^5.0.4",
-    "postcss": "^7",
+    "postcss": "8.2.4",
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "17.0.1",
@@ -53,6 +54,8 @@
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "eslint-plugin-typescript-sort-keys": "^1.5.0",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
