--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
+    "color": "^3.1.3",
     "debounce": "^1.2.0",
     "formik": "^2.2.5",
     "github-markdown-css": "^4.0.0",
