--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "@headlessui/react": "^0.2.0",
     "@monaco-editor/react": "^3.7.2",
     "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
     "color": "^3.1.3",
@@ -33,7 +32,7 @@
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
     "sass": "^1.30.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "2.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.4",
