--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^0.2.0",
     "@monaco-editor/react": "^3.7.2",
     "@tailwindcss/forms": "^0.2.1",
+    "@types/next-auth": "^3.1.24",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
     "color": "^3.1.3",
@@ -25,6 +26,7 @@
     "graphql": "^15.4.0",
     "next": "10.0.3",
     "next-apollo": "^5.0.4",
+    "next-auth": "^3.6.1",
     "postcss": "8.2.4",
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
