--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
+    "use-onclickoutside": "0.3.1",
     "sass": "^1.30.0",
     "tailwindcss": "2.0.2"
   },
