--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "formik": "^2.2.5",
     "github-markdown-css": "^4.0.0",
     "graphql": "^15.4.0",
+    "moment": "^2.29.1",
     "next": "10.0.3",
     "next-apollo": "^5.0.4",
     "next-auth": "^3.6.1",
@@ -34,9 +35,9 @@
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
-    "use-onclickoutside": "0.3.1",
     "sass": "^1.30.0",
-    "tailwindcss": "2.0.2"
+    "tailwindcss": "2.0.2",
+    "use-onclickoutside": "0.3.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.4",
