Add thumbnail to lesson

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,7 @@ DATABASE_URL=
 REDIS_URL=
 PORT=
 SESSION_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
