--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
     "sass": "^1.30.0",
