--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^4.11.0",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
+    "cloudinary": "^1.25.0",
     "codesandbox": "^2.2.1",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
