--- a/server/.env.production
+++ b/server/.env.production
@@ -1,2 +1,5 @@
 CORS_ORIGIN=https://codeamigo.dev
 SESSION_SECRET=secreto_prod
+
+CLOUDINARY_API_KEY=458736326487613
+CLOUDINARY_API_SECRET=graew93iO4RS0Tawg-qkVIHpMXA
