Add default codeamigo logo

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {
       "👨‍💻api/*": ["./api/*"],
       "👨‍💻apollo/*": ["./apollo/*"],
+      "👨‍💻assets/*": ["./assets/*"],
       "👨‍💻components/*": ["./components/*"],
       "👨‍💻generated/*": ["./generated/*"],
       "👨‍💻pages/*": ["./pages/*"],
