--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.4",
     "@babel/standalone": "^7.12.10",
+    "@codesandbox/sandpack-client": "^0.0.5",
     "@codesandbox/sandpack-react": "^0.0.5",
     "@headlessui/react": "^0.2.0",
     "@monaco-editor/react": "^3.7.2",
