--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
     "color": "^3.1.3",
+    "console-feed": "^3.2.2",
     "debounce": "^1.2.0",
     "formik": "^2.2.5",
     "github-markdown-css": "^4.0.0",
