--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "next": "10.0.3",
     "next-apollo": "^5.0.4",
     "next-auth": "^3.6.1",
+    "nprogress": "^0.2.0",
     "pg": "^8.5.1",
     "postcss": "8.2.4",
     "react": "17.0.1",
@@ -51,6 +52,7 @@
     "@types/babel__standalone": "^7.1.3",
     "@types/debounce": "^1.2.0",
     "@types/node": "^14.14.11",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.0",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
