--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@babel/standalone": "^7.12.10",
     "@codesandbox/sandpack-client": "^0.0.6",
     "@codesandbox/sandpack-react": "^0.0.6",
-    "@headlessui/react": "^0.2.0",
+    "@headlessui/react": "1.4.1",
     "@monaco-editor/react": "^3.8.3",
     "@tailwindcss/forms": "^0.2.1",
     "@types/next-auth": "^3.1.24",
