--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "remark-gfm": "^1.0.0",
     "sass": "^1.30.0",
     "tailwindcss": "2.0.2",
+    "tailwindcss-named-groups": "0.0.5",
     "use-onclickoutside": "0.3.1"
   },
   "devDependencies": {
