--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["plugin:prettier/recommended"],
+  "extends": ["plugin:prettier/recommended", "plugin:tailwindcss/recommended"],
   "root": true,
 
   "plugins": [
@@ -9,6 +9,7 @@
     "simple-import-sort",
     "sort-destructure-keys",
     "sort-keys-fix",
+    "tailwindcss",
     "typescript-sort-keys"
   ],
 
