--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
+    "eslint-plugin-tailwindcss": "1.17.0",
     "eslint-plugin-typescript-sort-keys": "^1.5.0",
     "next-images": "^1.7.0",
     "postcss-cli": "^8.3.1",
