--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/forms": "^0.2.1",
     "@types/next-auth": "^3.1.24",
     "@types/react-dom": "^17.0.0",
+    "apollo3-cache-persist": "0.13.0",
     "autoprefixer": "^9",
     "color": "^3.1.3",
     "console-feed": "^3.2.2",
@@ -29,8 +30,8 @@
     "github-markdown-css": "^4.0.0",
     "graphql": "^15.4.0",
     "moment": "^2.29.1",
-    "next": "10.0.3",
-    "next-apollo": "^5.0.4",
+    "next": "11.1.2",
+    "next-apollo": "5.0.7",
     "next-auth": "^3.6.1",
     "nprogress": "^0.2.0",
     "pg": "^8.5.1",
@@ -68,10 +69,10 @@
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "eslint-plugin-tailwindcss": "1.17.0",
     "eslint-plugin-typescript-sort-keys": "^1.5.0",
-    "next-images": "^1.7.0",
+    "next-images": "1.8.1",
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.0",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.3.2"
   }
 }
