--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "@codesandbox/sandpack-client": "^0.0.6",
     "@codesandbox/sandpack-react": "^0.0.6",
     "@headlessui/react": "1.4.1",
-    "@monaco-editor/react": "^3.8.3",
+    "@monaco-editor/react": "4.3.1",
     "@tailwindcss/forms": "^0.2.1",
     "@types/next-auth": "^3.1.24",
     "@types/react-dom": "^17.0.0",
