--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@monaco-editor/react": "4.3.1",
     "@tailwindcss/forms": "^0.2.1",
     "@types/next-auth": "^3.1.24",
+    "@types/numeral": "^2.0.2",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
     "color": "^3.1.3",
