Show donate page on lesson preview

--- a/client/.env.example
+++ b/client/.env.example
@@ -8,3 +8,6 @@ NEXT_PUBLIC_GITHUB_SECRET=
 
 NEXT_PUBLIC_CLOUDINARY_API_KEY=
 NEXT_PUBLIC_CLOUDINARY_NAME=
+
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
