--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@codesandbox/sandpack-react": "^0.1.19",
     "@headlessui/react": "1.4.1",
     "@monaco-editor/react": "4.3.1",
+    "@stripe/stripe-js": "1.21.1",
     "@tailwindcss/forms": "^0.2.1",
     "@types/next-auth": "^3.1.24",
     "@types/numeral": "^2.0.2",
@@ -44,6 +45,7 @@
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
     "sass": "^1.30.0",
+    "stripe": "^8.188.0",
     "tailwindcss": "2.0.2",
     "tailwindcss-named-groups": "0.0.5",
     "use-onclickoutside": "0.3.1"
