--- a/client/codegen.yml
+++ b/client/codegen.yml
@@ -1,11 +1,11 @@
 overwrite: true
 schema:
-  - "http://localhost:4000/graphql"
-  - "./apollo/client/schema.graphql"
-documents: "graphql/**/*.graphql"
+  - 'http://localhost:4000/graphql'
+  - './apollo/client/schema.graphql'
+documents: 'graphql/**/*.graphql'
 generates:
   generated/graphql.tsx:
     plugins:
-      - "typescript"
-      - "typescript-operations"
-      - "typescript-react-apollo"
+      - 'typescript'
+      - 'typescript-operations'
+      - 'typescript-react-apollo'
