--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,9 @@
   "devDependencies": {
     "@types/connect-redis": "^0.0.15",
     "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.9",
     "@types/express-session": "^1.15.6",
     "@types/node": "^14.14.10",
+    "@types/node-fetch": "^2.3.3",
     "@types/redis": "^2.8.28",
     "class-validator": "^0.12.2",
     "nodemon": "^2.0.6",
@@ -45,7 +45,7 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "express-session": "^1.17.1",
     "gen-env-types": "^1.0.4",
     "graphql": "^15.4.0",
