--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "1.4.1",
     "@monaco-editor/react": "4.3.1",
     "@stripe/stripe-js": "1.21.1",
+    "@stackblitz/sdk": "^1.8.0",
     "@tailwindcss/forms": "^0.2.1",
     "@types/next-auth": "^3.1.24",
     "@types/numeral": "^2.0.2",
