--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -16,6 +16,7 @@
   "rules": {
     "prettier/prettier": "error",
     "react/jsx-sort-props": "error",
+    "tailwindcss/no-custom-classname": "ignore",
     "simple-import-sort/exports": "error",
     "simple-import-sort/imports": "error",
     "sort-destructure-keys/sort-destructure-keys": "error",
