--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,8 @@
     "@types/cors": "^2.8.8",
     "@types/express-session": "^1.15.6",
     "@types/ioredis": "^4.17.8",
-    "@types/node-fetch": "^2.3.3",
     "@types/node": "^14.14.10",
+    "@types/node-fetch": "^2.3.3",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
     "@types/uuid": "^8.3.0",
@@ -51,6 +51,7 @@
     "graphql": "^15.4.0",
     "ioredis": "^4.19.2",
     "nodemailer": "^6.4.16",
+    "openai": "^3.1.0",
     "pg": "^8.5.1",
     "prettier": "^2.2.1",
     "reflect-metadata": "^0.1.13",
