--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.4",
+    "@babel/parser": "^7.20.3",
     "@babel/standalone": "^7.12.10",
+    "@babel/traverse": "^7.20.1",
     "@codesandbox/sandpack-client": "^1.2.2",
     "@codesandbox/sandpack-react": "^1.2.2",
     "@headlessui/react": "1.4.1",
     "@monaco-editor/react": "4.3.1",
-    "@stripe/stripe-js": "1.21.1",
     "@stackblitz/sdk": "^1.8.0",
+    "@stripe/stripe-js": "1.21.1",
     "@tailwindcss/forms": "^0.2.1",
     "@types/next-auth": "^3.1.24",
     "@types/numeral": "^2.0.2",
@@ -32,6 +34,7 @@
     "graphql": "^15.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "monaco-jsx-highlighter": "^2.0.4",
     "next": "12.2.0",
     "next-apollo": "5.0.7",
     "next-auth": "^3.6.1",
