--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,8 @@
     "@babel/parser": "^7.20.3",
     "@babel/standalone": "^7.12.10",
     "@babel/traverse": "^7.20.1",
-    "@codesandbox/sandpack-client": "^1.2.2",
-    "@codesandbox/sandpack-react": "^1.2.2",
+    "@codesandbox/sandpack-client": "1.2.2",
+    "@codesandbox/sandpack-react": "1.2.2",
     "@headlessui/react": "1.4.1",
     "@monaco-editor/react": "4.4.6",
     "@stackblitz/sdk": "^1.8.0",
