--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@babel/parser": "^7.20.3",
     "@babel/standalone": "^7.12.10",
     "@babel/traverse": "^7.20.1",
-    "@codesandbox/sandpack-react": "2.1.9",
+    "@codesandbox/sandpack-react": "^2.2.0",
     "@headlessui/react": "1.4.1",
     "@monaco-editor/react": "4.4.6",
     "@stackblitz/sdk": "^1.8.0",
