--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,13 @@
     "@babel/parser": "^7.20.3",
     "@babel/standalone": "^7.12.10",
     "@babel/traverse": "^7.20.1",
-    "@codesandbox/sandpack-react": "^2.2.0",
+    "@codesandbox/sandpack-client": "1.2.2",
+    "@codesandbox/sandpack-react": "1.2.2",
     "@headlessui/react": "1.4.1",
     "@monaco-editor/react": "4.4.6",
     "@stackblitz/sdk": "^1.8.0",
     "@stripe/stripe-js": "1.21.1",
-    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/forms": "^0.2.1",
     "@types/next-auth": "^3.1.24",
     "@types/numeral": "^2.0.2",
     "@types/react-dom": "^17.0.0",
@@ -28,7 +29,7 @@
     "console-feed": "^3.2.2",
     "debounce": "^1.2.0",
     "formik": "^2.2.5",
-    "framer-motion": "10.6.0",
+    "framer-motion": "4.1.17",
     "github-markdown-css": "^4.0.0",
     "graphql": "^15.4.0",
     "lodash": "^4.17.21",
@@ -41,15 +42,15 @@
     "numeral": "^2.0.6",
     "pg": "^8.5.1",
     "postcss": "8.4.21",
-    "react": "18.2.0",
+    "react": "17.0.1",
     "react-apollo": "^3.1.5",
-    "react-dom": "18.2.0",
+    "react-dom": "17.0.1",
     "react-dropzone": "11.4.2",
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
     "sass": "^1.30.0",
     "stripe": "^8.188.0",
-    "tailwindcss": "3.2.7",
+    "tailwindcss": "2.0.2",
     "tailwindcss-named-groups": "0.0.5",
     "use-onclickoutside": "0.3.1"
   },
@@ -73,7 +74,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
-    "eslint-plugin-tailwindcss": "3.10.1",
+    "eslint-plugin-tailwindcss": "1.17.0",
     "eslint-plugin-typescript-sort-keys": "^1.5.0",
     "next-images": "1.8.1",
     "postcss-cli": "^8.3.1",
