--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "numeral": "^2.0.6",
     "pg": "^8.5.1",
     "postcss": "8.4.21",
+    "posthog-js": "^1.53.2",
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
     "react-dom": "18.2.0",
