--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,7 @@
     "remark-gfm": "^1.0.0",
     "sass": "^1.30.0",
     "stripe": "^8.188.0",
-    "tailwindcss": "3.2.7",
+    "tailwindcss": "^3.3.1",
     "tailwindcss-named-groups": "0.0.5",
     "use-onclickoutside": "0.3.1"
   },
