--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "posthog-js": "^1.53.2",
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-dropzone": "11.4.2",
     "react-markdown": "^5.0.3",
