--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "@headlessui/react": "1.4.1",
     "@monaco-editor/react": "4.5.0",
     "@stackblitz/sdk": "^1.8.0",
-    "@stripe/stripe-js": "1.21.1",
+    "@stripe/stripe-js": "^1.52.1",
     "@tailwindcss/forms": "0.5.3",
     "@types/next-auth": "^3.1.24",
     "@types/numeral": "^2.0.2",
@@ -51,7 +51,7 @@
     "react-markdown": "^5.0.3",
     "remark-gfm": "^1.0.0",
     "sass": "^1.30.0",
-    "stripe": "^8.188.0",
+    "stripe": "^12.3.0",
     "tailwindcss": "^3.3.1",
     "tailwindcss-named-groups": "0.0.5",
     "use-onclickoutside": "0.3.1"
