--- a/client/.env.example
+++ b/client/.env.example
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_API_URL=http://localhost:4000
 
 NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=secret
 NEXT_PUBLIC_GOOGLE_ID=
 NEXT_PUBLIC_GOOGLE_SECRET=
 NEXT_PUBLIC_GITHUB_ID=
