--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "pg": "^8.5.1",
     "postcss": "8.4.21",
     "posthog-js": "^1.53.2",
+    "pyodide": "^0.23.2",
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
     "react-device-detect": "^2.2.3",
